Upgrade to Robolectric 2.3