@@ -128,7 +128,7 @@
       <dependency>
          <groupId>org.robolectric</groupId>
          <artifactId>robolectric</artifactId>
-         <version>2.2</version>
+         <version>2.3</version>
          <scope>test</scope>
       </dependency>
       <dependency>
@@ -246,6 +246,9 @@
                   <version>0.7.0.201403182114</version>
                </dependency>
             </dependencies>
+            <configuration>
+                <argLine>${argLine} -XX:MaxPermSize=256m</argLine>
+            </configuration>
          </plugin>
       </plugins>
    </build>
